# TBot

./: .gitignore  BotSimulator.h  CMakeLists.txt  Compiler Explorer Code.cpp  LoadCsvData.cpp  LoadCsvData.h  US500_prices.csv  bot_simulator.cpp  highlight_closes_data.txt  highlight_data.txt  highlight_opens_data.txt  import_data.py  main.cpp  plot_data.txt  read_prices.py  tbot.py
headers/: Auxiliary.h  BotSimulator.h  Graph.h  LoadCsvData.h  Patterns.h
python scripts/: draw_graphs.py  import_data.py  interval_reader.py  read_prices.py  us500_prices.csv
python scripts/media_tracker/: config.env  news_monitor.db  script.py  test_script.py
src/: BotSimulator.cpp  CMakeLists.txt  Graph.cpp  LoadCsvData.cpp  Patterns.cpp  bot_simulator.cpp
testing_data/: avg_data.txt  btc_prices.csv  deviations_histogram.txt  differences_histogram.txt  draw_graphs.py  eth.csv  highlight_closes_data.txt  highlight_opens_data.txt  long_avg_data.txt  prices_data.txt  short_avg_data.txt  test.csv  us500_prices (2).csv
tests/: BotSimulatorTest.cpp  CMakeLists.txt  PatternsTest.cpp
